--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
         <div id="typeContainer"><h3 id="type">Technical Event</h3></div>
         <h1 id="title">Paper Presentation</h1>
        
-        <p id="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda cumque rerum animi a modi alias ab vitae beatae. Tempora omnis temporibus corrupti libero quos ad inventore reiciendis? Amet nesciunt dolores ipsa dicta fuga reiciendis accusamus rerum consectetur quo nobis qui asperiores vel atque voluptatum ducimus voluptatem quasi impedit, obcaecati iste non modi quod ab. Quasi modi temporibus iusto officia rem.</p>
+        <div id="content">
+            <p id="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda cumque rerum animi a modi alias ab vitae beatae. Tempora omnis temporibus corrupti libero quos ad inventore reiciendis? Amet nesciunt dolores ipsa dicta fuga reiciendis accusamus rerum consectetur quo nobis qui asperiores vel atque voluptatum ducimus voluptatem quasi impedit, obcaecati iste non modi quod ab. Quasi modi temporibus iusto officia rem.</p>
         <a href="#" id="reg">Register</a>
+        </div>
        </div>
     </div>
   </section> 
